tests/snapshots/snapshots__budget_either_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 6 → level 0 (6 words)

README-crates.io.md
src/into_either.rs
src/iterator.rs
src/lib.rs
src/serde_untagged.rs
src/serde_untagged_optional.rs
